--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.0.0",
     "mongoose": "^6.7.2"
   }
 }
